--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
     "handlebars": "^4.7.7",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
