--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start:test": "cross-env NODE_ENV=test node dist/main",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
+    "pm2:prod": "cross-env NODE_ENV=production pm2 start dist/main.js --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
