feat: 线上环境数据库地址修改

--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@
  # @Author       : wuhaidong
  # @Date         : 2023-09-25 16:12:16
  # @LastEditors  : wuhaidong
- # @LastEditTime : 2023-09-26 16:37:03
+ # @LastEditTime : 2023-12-05 14:51:30
 ### 
 PORT=4000
 PREFIX='/api'
@@ -12,7 +12,7 @@ PREFIX='/api'
 DB_TYPE='mysql'
 DB_HOST='localhost'
 DB_USERNAME=root
-DB_PASSWORD='123456'
-DB_DATABASE=nest-app
+DB_PASSWORD='whd123456'
+DB_DATABASE=leeks
 DB_PORT=3306
 DB_SYNCHRONIZE=false
