chore: 区分开发环境和生产环境

--- a/.env.development
+++ b/.env.development
@@ -3,16 +3,16 @@
  # @Author       : wuhaidong
  # @Date         : 2023-09-25 16:12:16
  # @LastEditors  : wuhaidong
- # @LastEditTime : 2023-09-26 16:47:34
+ # @LastEditTime : 2023-12-18 22:00:50
 ###
 PORT=4000
 PREFIX='/api'
 
 # DB
 DB_TYPE='mysql'
-DB_HOST='localhost'
-DB_USERNAME=root
-DB_PASSWORD='123456'
-DB_DATABASE='nest-app'
+DB_HOST='192.168.110.101'
+DB_USERNAME=leeks
+DB_PASSWORD='9343101026whd'
+DB_DATABASE='leeks'
 DB_PORT=3306
 DB_SYNCHRONIZE=false
