--- a/.env.production
+++ b/.env.production
@@ -3,16 +3,16 @@
  # @Author       : wuhaidong
  # @Date         : 2023-09-25 16:12:16
  # @LastEditors  : wuhaidong
- # @LastEditTime : 2023-12-06 14:54:25
+ # @LastEditTime : 2023-12-18 22:04:46
 ### 
 PORT=4000
 PREFIX='/api'
 
 # DB
 DB_TYPE='mysql'
-DB_HOST='192.168.110.101'
+DB_HOST='43.142.72.172'
 DB_USERNAME=leeks
-DB_PASSWORD='8YhnTaWadMzEwJjA'
+DB_PASSWORD='9343101026whd'
 DB_DATABASE='leeks'
 DB_PORT=3306
 DB_SYNCHRONIZE=false
