--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start:test": "cross-env NODE_ENV=test node dist/main",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
-    "pm2:prod": "cross-env NODE_ENV=production pm2 start dist/main.js --watch",
+    "pm2:dev": "cross-env NODE_ENV=development pm2 start dist/main.js --name=leeks-server-dev --watch",
+    "pm2:prod": "cross-env NODE_ENV=production pm2 start dist/main.js --name=leeks-server --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
